# git-synchronizer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  codecov.yml  mise.toml  prek.toml  release-plz.toml
.github/workflows/: ci.yml  release-binaries.yml  release-plz.yml  release.yml
.opencode/reports/: consistency-report-2026-04-10.md
src/: branches.rs  cleaner.rs  cli.rs  config.rs  git.rs  main.rs  test_helpers.rs  ui.rs  worktrees.rs
tests/: integration.rs
