[package]
name = "git-synchronizer"
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["Axel H. <noirbizarre@gmail.com>"]
description = "Easily synchronize your local branches and worktrees"
repository = "https://github.com/noirbizarre/git-synchronizer"
readme = "README.md"
keywords = ["git", "branches", "sync", "worktree", "synchronize"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "git-sync"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
cliclack = "0.4"
console = "0.16"
globset = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
